--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -131,7 +131,7 @@ flutter:
   assets:
     - assets/brand/
     - assets/images/
-    - assets/translations/
+    - assets/i18n/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
