--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <application
         android:label="SpeedBook Taxi Driver"
         android:name=".MyApplication"
+        android:enableOnBackInvokedCallback="true"
         android:icon="@mipmap/ic_launcher">
 
         <activity
@@ -48,6 +49,10 @@
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_channel_id"
             android:value="default_channel" />
+        <meta-data android:name="io.branch.sdk.BranchKey" android:value="@string/branch_key"/>
+        <meta-data android:name="io.branch.sdk.BranchKey.test" android:value="@string/branch_key_test"/>
+        <!-- В debug-манифесте можно включить тестовый режим: -->
+        <meta-data android:name="io.branch.sdk.TestMode" android:value="true"/>
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility and
