--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.14+13
+version: 1.0.15+14
 
 flutter_native_splash:
   android: true
@@ -74,6 +74,7 @@ dependencies:
   firebase_auth: ^6.0.2
   firebase_app_check: ^0.4.0+1
   firebase_messaging: ^16.0.1
+  flutter_local_notifications: ^19.5.0
 
   # Firebase
   permission_handler: any
