--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.19+19
+version: 1.0.20+20
 
 flutter_native_splash:
   android: true
@@ -93,6 +93,7 @@ dependencies:
   qr_flutter: ^4.1.0
   flutter_multi_formatter: any
   agora_rtc_engine: ^6.4.1
+  flutter_ringtone_player: ^4.0.0+4
 
   # Maps & Location
   google_maps_flutter: any
