--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
     <uses-permission android:name="android.permission.BLUETOOTH"/>
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_LOCATION" />
 
     <uses-permission
                 android:name="com.google.android.gms.permission.AD_ID"
@@ -59,6 +61,11 @@
         <!-- Удалите эту строку из main-манифеста (перенесите в debug/AndroidManifest.xml):
         <meta-data android:name="io.branch.sdk.TestMode" android:value="true"/>
         -->
+
+        <service
+                android:name="com.pravera.flutter_foreground_task.service.ForegroundService"
+                android:exported="false"
+                android:foregroundServiceType="location" />
     </application>
 
     <queries>
