--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.24+24
+version: 1.0.25+25
 
 flutter_native_splash:
   android: true
@@ -75,6 +75,7 @@ dependencies:
   firebase_app_check: ^0.4.0+1
   firebase_messaging: ^16.0.1
   flutter_local_notifications: ^19.5.0
+  flutter_foreground_task: ^8.10.0
 
   # Firebase
   permission_handler: any
@@ -122,4 +123,3 @@ flutter:
     - assets/brand/
     - assets/images/
     - assets/i18n/
-
