--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.31+31
+version: 1.0.32+32
 
 flutter_native_splash:
   android: true
@@ -27,7 +27,7 @@ flutter_native_splash:
   color: "#FFFFFF"
   image: assets/brand/splash.png
 
-  # Для тёмной темы (если используешь)
+  # Для тёмной темы 
   color_dark: "#121212"
   image_dark: assets/brand/splash_dark.png
 
@@ -123,3 +123,25 @@ flutter:
     - assets/brand/
     - assets/images/
     - assets/i18n/
+
+  fonts:
+    - family: NotoSansKhmer
+      fonts:
+        - asset: assets/fonts/NotoSansKhmer-Thin.ttf
+          weight: 100
+        - asset: assets/fonts/NotoSansKhmer-ExtraLight.ttf
+          weight: 200
+        - asset: assets/fonts/NotoSansKhmer-Light.ttf
+          weight: 300
+        - asset: assets/fonts/NotoSansKhmer-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/NotoSansKhmer-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/NotoSansKhmer-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/NotoSansKhmer-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/NotoSansKhmer-ExtraBold.ttf
+          weight: 800
+        - asset: assets/fonts/NotoSansKhmer-Black.ttf
+          weight: 900
